2003-05-12  Ross Burton  <ross@burtonini.com>

	* configure.in: 
	Depend on GStreamer 0.6.1 for correct Ogg tagging.

	* src/sj-main.c:
	Remove a call to set the SjExtractor format, it was a test. Also
	change the application name slightly.

	* src/Makefile.am (AM_CFLAGS): 
	Be even meaner about code warnings, and fix the bacon copy code.

	* src/cd-drive.c:
	* bacon-cd-selection.c:
	Updated from libbacon, lots of fixed.

2003-05-08  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c (device_changed_cb):
	Call exit(1) instead of gtk_main_quit() as there is not a main
	loop running if we get here on startup.

2003-05-08  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix a compile error...

2003-05-08  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Enable the format radio buttons and add tooltips.

	* src/sj-extractor.[ch]:
	Add a "format" property, and rebuild the pipeline as required. It
	is currently ignored however...

	* src/sj-extracting.c:
	Use the SjExtractor format property, and pull apart the extension
	code.

	* src/sj-prefs.c:
	When the format GConf key is changed, update the radio buttons.
	
	* src/sj-main.c:
	Remove encoding_format, and handle the format GConf key nicely
	(using the g_enum* functions). Then set the format property of the
	SjExtractor.
	
	* src/sound-juicer.h:
	encoding_format no longer exists.

2003-05-07  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Make the columns resizable.

	* data/sound-juicer.glade:
	Remove the "CD Info" heading.

2003-05-06  Carlos Perelló Marín <carlos@gnome.org>

	* configure.in (ALL_LINGUAS): Changed es_ES with es.

2003-05-06  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Added Edit -> Deselect All

	* src/sj-main.c:
	Implement Deselect All, generalising Select All. Closes #112320.

2003-05-06  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	(on_progress_cancel_clicked): Set the extracting state field to