@@ -1,5 +1,12 @@
 2003-05-12  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extractor.c:
+	Rebuild the pipeline using the correct encoder element. This makes
+	the Format option work, but you only get metadata in Ogg at the
+	minute.
+
+2003-05-12  Ross Burton  <ross@burtonini.com>
+
 	* configure.in: 
 	Depend on GStreamer 0.6.1 for correct Ogg tagging.
 
